apps/staging/web/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-depl
  namespace: harrytang-staging
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: web-depl
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-depl
      version: v1
  template:
    metadata:
      labels:
        app: web-depl
        version: v1
    spec:
      volumes:
        - name: next-data
          persistentVolumeClaim:
            claimName: next-data-pvc
      containers:
        - name: web
          image: ghcr.io/harrytang/web:main-06ccf7c-1722798960 # {"$imagepolicy": "harrytang-staging:web"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
          volumeMounts:
            - name: next-data
              mountPath: /app/.next
