apps/staging/web/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-http
  namespace: harrytang-staging
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-staging-web-http
  hostnames:
    - next.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-https
  namespace: harrytang-staging
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-staging-web-https
  hostnames:
    - next.harrytang.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          # headers:
          #   - type: Exact
          #     name: X-Forwarded-For
          #     value: '144.21.59.206'

      backendRefs:
        - name: web-srv
          port: 3000
