apps/staging/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: harrytang-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/whitelist-source-range: '144.21.59.206/32,2603:c020:c001:bb48:a79b:1d9d:22f9:c85a/128'
spec:
  tls:
    - hosts:
        - next.harrytang.xyz
      secretName: web-tls
  rules:
    - host: next.harrytang.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 3000
